<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_prev"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_prev" />

    <item
        android:id="@+id/nav_next"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/title_next" />

    <item
        android:id="@+id/nav_team"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/team" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorit_match" />

    <item
        android:id="@+id/nav_favorite_team"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favorit_team" />

</menu>
